# hydra-pay

./: .gitignore  MIGRATION_PLAN.md  MIGRATION_STATUS.md  build-in-docker.sh  cabal.project  cardano-libs.nix  compute-hashes.sh  default.nix  flake.nix  load-and-push.sh  package-hashes.txt  push-docker.sh  release.nix  shell-in-docker.sh
.ci/: container-init.sh  inner-build.sh
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml
backend/: backend.cabal
backend/src/: Backend.hs
backend/src-bin/: main.hs
cardano-project/: base.nix  default.nix  default.nix.old-obelisk  extras.nix
cardano-project/cardano-overlays/: default.nix  ghcjs.nix
cardano-project/patches/: README.md  beam-automigrate-ghc96.patch  cardano-crypto-class-remove-libblst-pkgconfig.patch  cardano-ledger-core-memobytes-kind.patch  (+33 more)
common/: common.cabal
docs/: DEPENDENCY-ANALYSIS.md  MIGRATION_STATUS.md  NEXT-STEPS.md  PACKAGE-VERIFICATION-STATUS.md  README.md  cabal-dependency-analysis.md  dep-list.md  hydralaunch-integration.md  list-super-packages.sh  nix-docker-troubleshooting.md  package-check-results.md  package-verification-summary.md  recursive-dependency-analysis.md
quickcheck-instances-dummy/: quickcheck-instances.cabal
quickcheck-instances-dummy/src/Test/QuickCheck/: Instances.hs
scripts/: README.md  add-missing-dependencies.sh  analyze-dependencies-recursive.sh  check-cabal-dependencies.sh  check-cabal-versions.sh  check-missing-packages.sh  check-packages.sh  comment-out-packages.sh  generate-nix-files.sh  scan-cabal-versions.sh  verify-github-packages.sh
(+41 files in other folders)
